[package]
name = "zeta-abi"
version = "1.0.0"
edition = "2021"
description = "Zeta DEX ABI"
homepage = "https://github.com/zetamarkets/zeta-abi"
repository = "https://github.com/zetamarkets/zeta-abi"
keywords = ["zeta", "dex", "abi", "defi"]
license = "Apache-2.0"
exclude = [".github", ".gitignore"]

[features]
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint", "cpi"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["dex"] }
anchor-gen = { git = "https://github.com/glintmarkets/anchor-gen", rev = "1d36aa5" }
solana-program = "~1.16"

[dev-dependencies]
arrayref = "0.3.6"
bytemuck = "1.13.1"
safe-transmute = "0.11.0"
solana-account-decoder = "~1.16"
solana-client = "~1.16"
solana-sdk = "~1.16"
tokio = "1.14.1"
tokio-stream = { version = "0.1.11", features = ["sync"] }
